--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-25 10:16:29
+lastsearch = 2024-07-25 11:38:33
 
 [demxanh.com]
 match = -131.6%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOoou0r2kkB4LonyB4rQkZ-ruO-rVUyK1IPS0xVfNnccBt3DONoI-
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
