--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-25 03:30:01
+lastsearch = 2024-07-25 11:40:57
 
 [chieutruc.info]
 match = -73.9%%
@@ -18,13 +18,13 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [demxanh.com]
 match = -39.1%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
-match = -78.3%%
-title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/cao bằng
+match = -69.6%%
+title = Chiếu trúc tăm tre Cao Bằng loại 1 điều hòa mịn mát kích ...
+url = https://shopee.vn/Chiếu-trúc-tăm-tre-Cao-Bằng-loại-1-điều-hòa-mịn-mát-kích-thước-1.6m-x-2m-và-1.8-x-2m-Bảo-hành-3-tháng-i.177209468.21688967612
 
 [suongtuyet.com]
 match = 56.5%%
@@ -32,9 +32,9 @@ title = Chiếu Tre Cao Bằng - Đà Nẵng
 url = https://suongtuyet.com/chieu-truc-cao-bang
 
 [chieutrucsaigon.com]
-match = 39.1%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [thegioidemonline.com]
 match = 43.5%%
