--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-25 10:27:42
+lastsearch = 2024-07-25 11:34:47
 
 [www.zillow.com]
 match = -69.2%%
@@ -287,8 +287,8 @@ title = Farm Labor
 url = https://www.ers.usda.gov/topics/farm-economy/farm-labor/
 
 [www.epa.gov]
-match = -169.2%%
-title = Search for Superfund Sites Where You Live
+match = -230.8%%
+title = Search for Superfund Sites Where You Live | US EPA
 url = https://www.epa.gov/superfund/search-superfund-sites-where-you-live
 
 [www.nist.gov]
@@ -610,4 +610,9 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/ga-ni-long/
+
+[www.njcaa.org]
+match = -140.0%%
+title = NJCAA
+url = https://www.njcaa.org/
 
