--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-25 10:48:22
+lastsearch = 2024-07-25 11:35:47
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -13.0%%
+title = List of TCP and UDP port numbers
+url = https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers
 
 [www.facebook.com]
 match = -108.7%%
@@ -620,4 +620,9 @@ url = https://archive.newportbeachlibrary.org/NBPL/DocView.aspx?id=1231099&dbid=
 match = 0.0%%
 title = 
 url = https://www.koreanclass101.com/korean-age/
+
+[edition.cnn.com]
+match = -43.5%%
+title = CNN: Breaking News, Latest News and Videos
+url = https://edition.cnn.com/
 
