--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-25 11:39:15
+lastsearch = 2024-07-25 11:52:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -59,7 +59,7 @@ url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-22/
 [demxanh.com]
 match = -3.8%%
 title = Bảng giá Chăn ga gối Everhome 2019 mới nhất
-url = https://demxanh.com/chan-ga-goi-dem-everhome.html
+url = https://demxanh.com/chan-ga-goi-dem-everhome.html?srsltid=AfmBOoqy9DVqGT1ehVrJgsbhZgkRji0ieEeb7Oz7-STOnLMfPmk1FNsh
 
 [elective.com.vn]
 match = 27.3%%
