--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-25 09:03:36
+lastsearch = 2024-07-25 11:55:14
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -157.9%%
-title = ALIBABA - Bé Tú Anh | Nhạc Thiếu Nhi | Lời Việt: Lê Quốc ...
-url = https://www.youtube.com/watch?v=x-ljTpcenNg
+match = -147.4%%
+title = Ò Ó O o Dậy Đi Thôi Mau Dậy Bạn Ơi - Bài Hát Bé Nghe Mỗi ...
+url = https://www.youtube.com/watch?v=_bALkbOOQfY
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOorvZKJY6z9IE0YG2hJcDJyEC3xp1Zo4ViFBhomuf-KW4XwB1yAz
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
 match = -126.3%%
