--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-25 10:22:04
+lastsearch = 2024-07-25 11:56:56
 
 [scholar.google.com]
 match = -43.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 13/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -225.0%%
-title = 18 phút tập lắc vòng giảm eo,giảm mỡ bụng nhanh trong một ...
-url = https://www.youtube.com/watch?v=Z9nt7fzWvqI
+match = -250.0%%
+title = Tin Sáng 18/7 | Lộ dấu vết Ukraine trong vụ ám sát hụt?; Ông ...
+url = https://www.youtube.com/watch?v=jiLh-L9lZE0
 
 [books.google.com]
 match = -218.8%%
@@ -472,9 +472,9 @@ title = Bí thư Tỉnh ủy Lâm Văn Mẫn khảo sát các cụm công ...
 url = https://www.baosoctrang.org.vn/cong-nghiep/bi-thu-tinh-uy-lam-van-man-khao-sat-cac-cum-cong-nghiep-tren-dia-ban-huyen-ke-sach-74877.html
 
 [baoquangnam.vn]
-match = -175.0%%
-title = Kỷ niệm 50 năm chiến thắng Nông Sơn - Trung Phước (18 ...
-url = https://baoquangnam.vn/ky-niem-50-nam-chien-thang-nong-son-trung-phuoc-18-7-1974-18-7-2024-dung-xay-que-huong-tu-dau-an-vung-dat-3138037.html
+match = -187.5%%
+title = Nhân dân bắt đầu vào viếng Tổng Bí thư Nguyễn Phú ...
+url = https://baoquangnam.vn/nhan-dan-bat-dau-vao-vieng-tong-bi-thu-nguyen-phu-trong-tu-18-gio-chieu-nay-3138481.html
 
 [m.nhipcaudautu.vn]
 match = -118.8%%
