--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-25 10:50:01
+lastsearch = 2024-07-25 11:46:59
 
 [everonvn.com.vn]
 match = -128.6%%
 title = Bảng giá bán bộ chăn ga gối cưới Everon Hàn Quốc Es 1816
-url = https://everonvn.com.vn/everon/615/bo-everon-es1816
+url = https://everonvn.com.vn/everon/615/bo-everon-es1816?srsltid=AfmBOoqaGJ34q-aGa_YLMa-r9gsp7LgCSjlmU_8j_Mi10RewukLvQWnJ
 
 [www.everonqb.com]
 match = -66.7%%
@@ -22,8 +22,8 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
+match = -28.6%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012
 url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
