--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-25 09:18:07
+lastsearch = 2024-07-25 11:46:38
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -27,9 +27,9 @@ title = Acupuncture Points - Ren 12
 url = https://www.acupuncture.com/education/points/ren/ren12.htm
 
 [www.facebook.com]
-match = -350.0%%
-title = REN 12 - CV 12 - The Front-Mu point of Stomach ...
-url = https://www.facebook.com/AcuProAcademy/videos/ren-12-cv-12-the-front-mu-point-of-stomach-acupuncturerocks/654368444704775/
+match = -410.0%%
+title = AcuPro Academy - REN 12 (CV 12) is the Front-Mu point of...
+url = https://www.facebook.com/AcuProAcademy/posts/ren-12-cv-12-is-the-front-mu-point-of-the-stomach-which-makes-it-a-perfect-acupu/1547352235406387/
 
 [www.journalofchinesemedicine.com]
 match = -250.0%%
@@ -107,9 +107,9 @@ title = Volleyball Announces 2024 Schedule
 url = https://purpleeagles.com/news/2024/6/25/womens-volleyball-volleyball-announces-2024-schedule.aspx
 
 [www.uscis.gov]
-match = -430.0%%
-title = I-589, Application for Asylum and for Withholding of Removal
-url = https://www.uscis.gov/sites/default/files/document/forms/i-589.pdf
+match = -230.0%%
+title = Chapter 7 - Child Status Protection Act
+url = https://www.uscis.gov/policy-manual/volume-7-part-a-chapter-7
 
 [www.ftb.ca.gov]
 match = -240.0%%
