--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-25 08:03:11
+lastsearch = 2024-07-25 11:45:16
 
 [www.instagram.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOoop4DjbHh4xG4Oyk8Zzy3N-7vLc3xmltEQbSdPa8uZ5y7caUg8M
 
 [www.facebook.com]
 match = 33.3%%
@@ -39,11 +39,11 @@ url = https://www.proz.com/profile/2092720
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorN8McKgl6w75x2c2BrkcXotpxWS18nmbAHWzCx2RFxrLeT0qvh
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [lanchi.vn]
