CI images update

--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-25 08:59:50
+lastsearch = 2024-07-25 12:30:56
 
 [www.diepxuan.com]
 match = -72.7%%
 title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html?srsltid=AfmBOopmv7Vzoc05bhnOLNqxmLfOzb107qUC5743heGMe91fv0QrFYaV
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = -68.2%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = -50.0%%
 title = Bộ Ga Giường Cao Cấp Loại Ga Chun Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/?srsltid=AfmBOoroefeXB_ss7_Xp4GgwW0BIq8jWWkG9jRK881yI5h1NQNddNLP7
+url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/
 
 [www.instagram.com]
 match = 4.5%%
@@ -49,7 +49,7 @@ url = https://www.sendo.vn/bo-ga-goi-chun.htm
 [demxanh.com]
 match = -40.9%%
 title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html?srsltid=AfmBOopNb9b5DH4TBF7_mZ7Ef0jf9gDAitNGWbTEFgfGCTZbYGsFI61H
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
 match = -127.3%%
