--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-25 07:59:06
+lastsearch = 2024-07-25 12:46:11
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -23,13 +23,13 @@ url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
 match = 5.3%%
-title = Arun Wiita, MD, PhD
-url = https://profiles.ucsf.edu/arun.wiita
+title = Margaret Tempero, MD
+url = https://profiles.ucsf.edu/margaret.tempero
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -142.1%%
+title = Exercise Recommendations for Cancer-Related Fatigue ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3647480/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -26.3%%
-title = Cheryl Anderson - UCSD Profiles
-url = https://profiles.ucsd.edu/cheryl.anderson
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [medboard.nv.gov]
 match = -100.0%%
