--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-25 11:30:30
+lastsearch = 2024-07-25 12:37:52
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu ghi nhạt
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -94.4%%
-title = Bộ ga phủ tròn Mystic-T 28 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-tron-mystic-t-28
+match = -66.7%%
+title = Bộ ga phủ Passion A112 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
@@ -97,9 +97,9 @@ title = Bộ Phủ L'amour Living LV10
 url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
-match = -61.1%%
-title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
-url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
+match = -66.7%%
+title = Bộ Drap & Chăn Chần Cotton 160x200 (5 Món)...
+url = https://leflair.com/en/shop/bo-drap-chan-chan-cotton-160x200-5-mon-15916
 
 [ninhouse.vn]
 match = -161.1%%
