--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-25 11:21:11
+lastsearch = 2024-07-25 12:41:23
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = -47.8%%
+title = Chiếu Cói Thái Bình ❤️FREESHIP❤️Chiếu Cói May Viền ...
+url = https://shopee.vn/Chiếu-Cói-Thái-Bình-❤️FREESHIP❤️Chiếu-Cói-May-Viền-In-Hoa-Gấm-Dừa-0-8-1m2-1m5-1m6-1m8-2m2-i.126028938.10544465291
 
 [m.facebook.com]
-match = -13.0%%
-title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
-url = https://m.facebook.com/61553157173242/
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=ru_RU
 
 [tiki.vn]
 match = -47.8%%
