--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-25 09:04:55
+lastsearch = 2024-07-25 12:43:06
 
 [thefelix.vn]
 match = -50.0%%
@@ -39,7 +39,7 @@ url = https://bsa.org.vn/nem-cao-su-thien-nhien-felix/
 [www.liena.com.vn]
 match = 28.9%%
 title = nệm cao su - thiên nhiên là gì? top những sản phẩm
-url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi
+url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi?srsltid=AfmBOoqeskpjX0S23sWrs9eqqGRNFyV8KKv9TwttoXZZXTlk7CderEBH
 
 [tiki.vn]
 match = 50.0%%
