--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-25 09:04:11
+lastsearch = 2024-07-25 12:33:20
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = 4 days ago
 url = https://www.instagram.com/p/C8YaPnayr2t/
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -155.6%%
-title = Vietnamese Community of Oregon - VNCO.org | Portland OR
-url = https://www.facebook.com/vncousa/
+match = -94.4%%
+title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
+url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -11.1%%
-title = Feu D'artific Tampon 2024
-url = https://www.tiktok.com/discover/feu-d’artific-tampon-2024
+match = -166.7%%
+title = Bún nem xào Sóc Trăng, Mỹ Hương - 15 Cách Mạng Tháng 8 ...
+url = https://www.tiktok.com/@qmthau/video/7231894235555843333?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
