--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-25 09:17:02
+lastsearch = 2024-07-25 12:34:23
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,14 +17,14 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -42.9%%
-title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
+match = 23.8%%
+title = Thảm bali 2m x 3m cao cấp
+url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
-match = -109.5%%
-title = Thảm trải sàn Sofa trang trí phòng khách Bali in 3D Nhung ...
-url = https://tiki.vn/tham-trai-san-sofa-trang-tri-phong-khach-bali-in-3d-nhung-ni-li-cao-cap-2m-x-3m-mau-10-p104944051.html?spid=272166690
+match = -9.5%%
+title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
+url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
 
 [muachunghaiphong.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Thảm Trải Sàn 1 6
 url = https://websosanh.vn/s/thảm+trải+sàn+1+6.htm
 
 [www.tiktok.com]
-match = -81.0%%
-title = Thảm bali trải sàn 3m.2m - #taoshop90 - #thảmbali
-url = https://www.tiktok.com/@tiemnhatao2019/video/7312084529114615042
+match = -23.8%%
+title = Abuza King Kuhusu Iphone Document
+url = https://www.tiktok.com/discover/abuza-king-kuhusu-iphone-document
 
 [iprice.vn]
 match = -19.0%%
