--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-25 12:13:28
+lastsearch = 2024-07-25 12:30:37
 
 [tuananh.vn]
 match = 8.0%%
@@ -37,14 +37,14 @@ title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
-match = -20.0%%
-title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
-url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
+match = -36.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
+url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [dem24h.vn]
-match = 12.0%%
-title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
-url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
+match = -8.0%%
+title = Đệm Bông Ép Bề Mặt Masage Korea Plus
+url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
 
 [suongtuyet.com]
 match = 16.0%%
