--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-25 04:13:02
+lastsearch = 2024-07-25 12:47:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.youtube.com]
 match = -147.6%%
