CI images update

--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-25 12:47:49
+lastsearch = 2024-07-25 13:43:17
 
 [shopee.vn]
 match = -162.5%%
@@ -12,8 +12,8 @@ title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ..
 url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = 12.5%%
-title = Hoi Chan (@hoichandraws)
+match = -162.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
@@ -27,9 +27,9 @@ title = Lư hương đá chân đặt mai rùa
 url = https://tuongdamynghe.com/trang-tri/lu-huong/lu-huong-da-chan-dat-mai-rua/
 
 [www.vinmec.com]
-match = -37.5%%
-title = Tác dụng của mai rùa với sức khỏe
-url = https://www.vinmec.com/vie/bai-viet/tac-dung-cua-mai-rua-voi-suc-khoe-vi/
+match = 0.0%%
+title = posts-vi-84.xml
+url = https://www.vinmec.com/sitemap/posts-vi-84.xml
 
 [www.youtube.com]
 match = -131.2%%
@@ -52,8 +52,8 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -131.2%%
-title = Phu Rua National Park bird checklist - Avibase
+match = -275.0%%
+title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
 url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
@@ -149,7 +149,7 @@ url = https://drallen.com.vn/khong-phan-loai/hoi-chung-co-rua-la-gi/
 [m.facebook.com]
 match = 66.7%%
 title = Chấn Hội Mai
-url = https://m.facebook.com/61561372675364
+url = https://m.facebook.com/61557079050657
 
 [vnba.org.vn]
 match = -175.0%%
