--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-25 11:47:20
+lastsearch = 2024-07-25 13:42:14
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = 35.7%%
-title = Chiếu nhựa loại đẹp Hà Nội, chiếu ...
-url = https://shopee.vn/Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-dã-ngoại-i.26647481.24652949365
+match = 21.4%%
+title = Chiếu Nhựa Việt Nam Gấp Gọn Loại 1,8mx3m
+url = https://shopee.vn/Chiếu-Nhựa-Việt-Nam-Gấp-Gọn-Loại-1-8mx3m-i.253710283.3483301940
 
 [tiki.vn]
 match = -21.4%%
@@ -97,9 +97,9 @@ title = Chuyện về làng chiếu Cẩm Nê - Năng lượng Quốc tế
 url = https://nangluongquocte.petrotimes.vn/chuyen-ve-lang-chieu-cam-ne-712698.html
 
 [baomoi.com]
-match = -39.3%%
-title = Du lịch Hà Nội: Làm sao hấp dẫn khách lưu trú mùa hè?
-url = https://baomoi.com/du-lich-ha-noi-lam-sao-hap-dan-khach-luu-tru-mua-he-c49414632.epi
+match = -60.7%%
+title = Nâng cao kỹ năng tuyên truyền, phổ biến chống rác thải ...
+url = https://baomoi.com/nang-cao-ky-nang-tuyen-truyen-pho-bien-chong-rac-thai-nhua-c49725888.epi
 
 [baodautu.vn]
 match = -57.1%%
@@ -310,4 +310,9 @@ url = https://m.youtube.com/watch?v=vuGFjIeLW6g
 match = -32.1%%
 title = Hà Giang | Hoa Tam Giác Mạch | Lũng Cú | Đồng Văn
 url = https://datviettour.com.vn/tour-du-lich-len-ha-giang-ngam-hoa-tam-giac-mach-4n3d-2282
+
+[www.vietravel.com]
+match = 0.0%%
+title = Hà Nội một chiều xuân
+url = https://www.vietravel.com/vn/non-nuoc-viet-nam/ha-noi-mot-chieu-xuan-v3370.aspx
 
