--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-25 12:44:51
+lastsearch = 2024-07-25 13:44:20
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -455,4 +455,9 @@ url = https://gy.linkedin.com/company/tuigroup?trk=products_details_guest_organi
 match = -308.3%%
 title = TUI Hotels & Resorts Taps Canary Technologies to Power ...
 url = https://www.prnewswire.com/news-releases/tui-hotels--resorts-taps-canary-technologies-to-power-its-digital-guest-journey-302204723.html
+
+[www.asdnews.com]
+match = -308.3%%
+title = Airbus, Tata Advanced Systems Formalise Contract for ...
+url = https://www.asdnews.com/news/aerospace/2024/07/24/airbus-tata-advanced-systems-formalise-contract-h125-helicopter-final-assembly-line-india
 
