--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-25 12:12:46
+lastsearch = 2024-07-25 13:45:01
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 50.0%%
-title = Chăn ga gối đệm giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
+match = 25.0%%
+title = 10 bộ chăn ga gối đệm tencel đẹp nhất
+url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
 
 [myhunggia.com]
 match = -4.2%%
@@ -82,9 +82,9 @@ title = Mua sắm online sản phẩm Chăn, Ga, Gối & Nệm giá tốt
 url = https://shopee.vn/Chăn-Ga-Gối-Nệm-cat.11036670.11036683
 
 [demxanh.com]
-match = 0.0%%
-title = Chăn ga gối Singapore đệm tròn CIRCLE16
-url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle16.html
+match = 20.8%%
+title = Chăn ga gối cotton Notag 4 món 16
+url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
