--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-25 13:19:49
+lastsearch = 2024-07-25 13:37:21
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = 22.2%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [demhong.vn]
 match = 11.1%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOor2JGmdWgohQW_Enysqtm2rtF2ksO-2g4LX_2j9Kkzy_MqDQWGh
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -18.5%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -29.6%%
+title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
+url = https://elmichsleep.vn/chan-ga-goi
 
 [khodemgiagoc.com]
 match = -37.0%%
