--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-25 07:56:52
+lastsearch = 2024-07-25 13:37:42
 
 [demxanh.com]
-match = 6.9%%
-title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
 
 [demchinhhang.com]
 match = 51.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = -17.2%%
+title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html
 
 [nanara.vn]
 match = 34.5%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [chiaki.vn]
-match = 13.8%%
-title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
+match = 10.3%%
+title = Chiếu Điều Hòa Tencel Latex Cao Su Non 3D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-mau-2022
 
 [shopee.vn]
 match = -20.7%%
