--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-25 09:45:27
+lastsearch = 2024-07-25 13:50:51
 
 [www.gov.uk]
 match = 0.0%%
@@ -1010,4 +1010,19 @@ url = https://goducks.com/
 match = -80.0%%
 title = Tổng hợp truyện Chainsaws+man - Trang 16
 url = https://zingtruyen.top/tag/chainsaws+man/16.html
+
+[admissions.uci.edu]
+match = 0.0%%
+title = 
+url = https://admissions.uci.edu/discover/why-uci/facts-and-rankings.php
+
+[www.austinfc.com]
+match = 0.0%%
+title = Austin FC | Home
+url = https://www.austinfc.com/
+
+[www.tcu.edu]
+match = -33.3%%
+title = Texas Christian University
+url = https://www.tcu.edu/
 
