--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-25 08:55:43
+lastsearch = 2024-07-25 13:45:22
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -321.4%%
-title = Rod Stewart - The Killing Of Georgie (Part I & II) (Official Video)
-url = https://www.youtube.com/watch?v=95zxtaKQBBc
+match = -285.7%%
+title = Cập nhật giá TIVI dưới 10 triệu trong tháng 7 tại Điện máy XANH
+url = https://www.youtube.com/watch?v=j_AHP98h1wM
 
 [www.reddit.com]
 match = -64.3%%
@@ -82,9 +82,9 @@ title = 10 Natural Ways to Build Healthy Bones
 url = https://www.healthline.com/nutrition/build-healthy-bones
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Blue_Bayou_(film)
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
 match = 0.0%%
