--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-25 12:41:04
+lastsearch = 2024-07-25 13:43:59
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -245.5%%
-title = Tam Nguyen Race Results - UltraRunning Magazine
-url = https://ultrarunning.com/calendar/runner/show?first_name=Tam&last_name=Nguyen&runner_id=120117
+match = -136.4%%
+title = Review: Speedland GS:TAM Trail Shoe
+url = https://ultrarunning.com/features/reviews/review-speedland-gstam-trail-shoe/
 
 [www.quora.com]
 match = -145.5%%
@@ -109,7 +109,7 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 [kstoolsvietnam.vn]
 match = -327.3%%
 title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html?srsltid=AfmBOor_0a5S-cWYWik4fUKjC_3ARb-sXqasDj3ZJe7zoEggrSoWT6Fo
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
