CI images update

--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-25 13:25:04
+lastsearch = 2024-07-25 13:59:18
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = 22.2%%
-title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
+match = -11.1%%
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
+url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tiki.vn]
 match = 7.4%%
@@ -242,9 +242,9 @@ title = Cháy trung tâm thương mại ở Trung Quốc khiến 16 người ...
 url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-trung-quoc-khien-16-nguoi-thiet-mang_164861.html
 
 [chiaki.vn]
-match = 0.0%%
-title = Chăn lông tuyết kẻ tăm Muji xuất Nhật mềm mịn
-url = https://chiaki.vn/chan-tuyet-ke-tam-thu-dong-muji-mem-min-xuat-nhat
+match = -25.9%%
+title = Chăn lông tuyết Dot To Dot cho bé của Hàn, Trắng trơn
+url = https://chiaki.vn/chan-long-tuyet-dot-to-dot-cho-be-cua-han
 
 [linhkienkhanhnhan.vn]
 match = 40.7%%
@@ -260,4 +260,14 @@ url = https://genk.vn/chu-nhan-thuc-su-cua-trai-dat-da-duoc-sinh-ra-truoc-con-ng
 match = -40.7%%
 title = Khám phá Yellowstone – Tuyệt tác thiên nhiên của nước Mỹ
 url = https://eurotravel.com.vn/kham-pha-yellowstone-tuyet-tac-thien-nhien-cua-nuoc-my/
+
+[ideas.repec.org]
+match = 14.8%%
+title = Mitchell Petersen - Citations
+url = https://ideas.repec.org/e/c/ppe42.html
+
+[download.asic.gov.au]
+match = -83.3%%
+title = ASIC Gazette
+url = https://download.asic.gov.au/media/3549401/um1_16.pdf
 
