--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-25 09:07:06
+lastsearch = 2024-07-25 14:01:00
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,8 +57,8 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -53.3%%
-title = Black Kingdom - D2 - Facebook
+match = -30.0%%
+title = 29 tháng 2
 url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [lacvietauction.vn]
