--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-25 12:37:11
+lastsearch = 2024-07-25 13:46:49
 
 [www.diepxuan.com]
 match = 0.0%%
 title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html?srsltid=AfmBOopCqWGhTTSHB_QO7JxN00txdWHWtx0fLqKjyA8RBRnPq1gFoeQG
 
 [www.qcyc.ca]
 match = -53.6%%
