--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-25 09:02:55
+lastsearch = 2024-07-25 13:53:19
 
 [hanvico.net.vn]
-match = -42.1%%
-title = Ruột gối lông vũ cao cấp 30x50 - Hanvico
-url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
+match = -10.5%%
+title = Ruột gối lông vũ cao cấp - Hanvico
+url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
@@ -110,4 +110,9 @@ url = https://bettybedding.vn/ruot-goi-doi-nam-om-gon-long-vu-nhan-tao-cao-cap-b
 match = 10.5%%
 title = Ruột Gối Ngủ Lông Vũ Cao Cấp - Pis
 url = https://pisbedding.com/san-pham/ruot-goi-ngu-long-vu-cao-cap/
+
+[lasantedepari.com]
+match = -136.8%%
+title = Ruột gối lông vũ Lasante - nâng niu giấc ngủ của bạn một ...
+url = http://lasantedepari.com/vi/danh-muc/ruot-goi/ruot-goi-long-vu/
 
