--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-25 12:34:23
+lastsearch = 2024-07-25 13:48:30
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,14 +17,14 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -33.3%%
+title = Thảm trải sàn BALI mẫu hoa hồng phấn 2M X 3M
+url = https://www.lazada.vn/products/tham-trai-san-bali-mau-hoa-hong-phan-2m-x-3m-i369416236.html?srsltid=AfmBOorucz1utMjMlNTWOMEu0CQmOkf2-3p5gfH8EheVcTnrI5-Bdz2J
 
 [tiki.vn]
-match = -9.5%%
-title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
-url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
+match = -128.6%%
+title = Thảm trải sàn, thảm lì Bali, thảm trang trí phòng khách 2m x ...
+url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html
 
 [muachunghaiphong.com]
 match = 0.0%%
