--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-25 13:58:37
+lastsearch = 2024-07-25 14:14:32
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
 url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = -17.9%%
-title = Chiếu trúc - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc
+match = -3.6%%
+title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [www.diepxuan.com]
 match = 28.6%%
