--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-25 11:46:59
+lastsearch = 2024-07-25 14:21:45
 
 [everonvn.com.vn]
-match = -128.6%%
-title = Bảng giá bán bộ chăn ga gối cưới Everon Hàn Quốc Es 1816
-url = https://everonvn.com.vn/everon/615/bo-everon-es1816?srsltid=AfmBOoqaGJ34q-aGa_YLMa-r9gsp7LgCSjlmU_8j_Mi10RewukLvQWnJ
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -66.7%%
-title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
+match = -71.4%%
+title = Ga phủ ESM20013 180x200 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/ga-phu-esm20013-180x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,8 +22,8 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -28.6%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012
+match = -123.8%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
 url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
