CI images update

--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-25 06:47:04
+lastsearch = 2024-07-25 14:40:25
 
 [eva.vn]
 match = -131.6%%
@@ -22,9 +22,9 @@ title = Chiếu trúc Mộc lá cao cấp chất lượng cao đủ kích cỡ
 url = https://shopee.vn/Chiếu-trúc-Mộc-lá-cao-cấp-chất-lượng-cao-đủ-kích-cỡ-i.296736591.8061367106
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 10.5%%
+title = Hoa chiều tím trắng cao E1
+url = https://mocnhienfarm.com/products/hoa-chieu-trang
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
