--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-25 06:48:54
+lastsearch = 2024-07-25 14:33:09
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = -16.0%%
@@ -47,9 +47,9 @@ title = Chương trình phát triển tên lửa của Đài Loan
 url = https://nghiencuuchienluoc.org/chuong-trinh-phat-trien-ten-lua-cua-dai-loan-la-chan-phong-thu-truoc-tham-vong-cua-trung-quoc/
 
 [books.google.com]
-match = -60.0%%
-title = Tù nhân Nhà nước: Hồi ký bí mật của Triệu Tử Dương
-url = https://books.google.com/books?id=r2fDEAAAQBAJ&pg=PT142&lpg=PT142&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=NCRazh4fSO&sig=ACfU3U02ej1fRzZL0wfXKtMVAmC9jDDzew&hl=en&sa=X&ved=2ahUKEwjdnfTxn76HAxXHkYkEHVu-CAIQ6AF6BAgcEAM
+match = -96.0%%
+title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=jtZLHBoEPp&sig=ACfU3U0HD4PVZIskqk6BEE4h-WaJUh5xLg&hl=en&sa=X&ved=2ahUKEwiq3rXA1sGHAxVJF1kFHW99GcsQ6AF6BAgXEAM
 
 [cellphones.com.vn]
 match = -52.0%%
@@ -305,4 +305,9 @@ url = https://hanoimoi.vn/dai-loan-trung-quoc-gap-rut-ung-pho-bao-lon-672881.htm
 match = -80.0%%
 title = Tân sinh viên cảnh giác những chiêu trò lừa đảo dễ gặp phải
 url = https://xaydungchinhsach.chinhphu.vn/tan-sinh-vien-canh-giac-nhung-chieu-tro-lua-dao-de-gap-phai-119240724151357032.htm
+
+[littlesaigontv.com]
+match = 8.0%%
+title = Đài Loan chuẩn bị đón bão Gaemi
+url = https://littlesaigontv.com/dai-loan-chuan-bi-don-bao-gaemi/
 
