--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-25 08:53:15
+lastsearch = 2024-07-25 14:38:39
 
 [everon.online]
 match = -32.0%%
@@ -12,9 +12,9 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -24.0%%
-title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -100.0%%
-title = Vòng Tay Ba Mẹ, Ba Là Ánh Mặt Trời Kia - Nhạc Thiếu Nhi Vui ...
-url = https://www.youtube.com/watch?v=RtjQBVtzZSA
+match = -84.0%%
+title = Gia Đình Nhỏ, Hạnh Phúc To - Nhạc Thiếu Nhi Vui Nhộn Hay ...
+url = https://www.youtube.com/watch?v=VQBkLYbLE5g
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -11.1%%
-title = Chợ Làng Dương Nội
-url = https://m.facebook.com/groups/162906191093410/posts/1440069396710410/
+match = -40.0%%
+title = MUA BÁN CHUNG CƯ HÀ NỘI | 💥 Bán căn hộ 4pn tại ...
+url = https://m.facebook.com/groups/224257585866951/posts/851548733137830/
 
 [dantri.com.vn]
 match = -60.0%%
