--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-25 12:56:19
+lastsearch = 2024-07-25 14:30:23
 
 [demxanh.com]
 match = 13.8%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
-match = 20.7%%
-title = Chăn Ga Gối Đệm Singapore | Hanoi
-url = https://www.facebook.com/changagoisingapore/?locale=nn_NO
+match = 28.0%%
+title = Chăn Ga Gối Đệm Singapore
+url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
 
 [changagoidemdep.vn]
 match = 3.4%%
