--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-25 13:52:17
+lastsearch = 2024-07-25 14:42:15
 
 [www.diepxuan.com]
-match = 12.0%%
-title = Điệp Xuân Chăn ga gối màu
+match = 3.6%%
+title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/chan-ga-goi-mau.html
 
 [shop.chanrathanhthuy.com]
@@ -22,14 +22,14 @@ title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
 url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 35.7%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://changagoidemsonghong.com/chan-ga-goi-uc018
+match = 0.0%%
+title = Mẫu chăn ga gối cao cấp dòng Urban mã UC-05
+url = https://changagoidemsonghong.com/chan-ga-goi-uc05
 
 [flexhouse.vn]
 match = -17.9%%
