--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-25 02:25:13
+lastsearch = 2024-07-25 14:41:10
 
 [www.facebook.com]
 match = -182.4%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = -17.6%%
-title = Philip L. Lorenzi, Ph.D.
-url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
+match = 0.0%%
+title = Hans Lee, MD
+url = https://faculty.mdanderson.org/profiles/hans_lee.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -260,4 +260,9 @@ url = https://ehp.niehs.nih.gov/0901716
 match = -29.4%%
 title = Mao Feng Mondays #3: Da Gu Yun
 url = https://thesweetestdew.com/2019/04/12/mao-feng-mondays-3-da-gu-yun/
+
+[www.dfhcc.harvard.edu]
+match = -5.9%%
+title = Ramnik J. Xavier, MD, FAAN
+url = http://www.dfhcc.harvard.edu/insider/member-detail?tx_hcc_persondetail[action]=show&tx_hcc_persondetail[controller]=Person&tx_hcc_persondetail[person]=275&cHash=b216b54017b1cfb2143c73de712547ef
 
