--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-25 13:54:21
+lastsearch = 2024-07-25 14:32:27
 
 [www.lazada.vn]
 match = -17.4%%
@@ -22,9 +22,9 @@ title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
 url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 26.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [trangvangvietnam.com]
 match = 21.7%%
