--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-25 12:44:20
+lastsearch = 2024-07-25 14:37:36
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
 url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [demxanh.com]
-match = -8.3%%
-title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+match = 25.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -27,9 +27,9 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = 25.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [shopee.vn]
 match = 50.0%%
