CI images update

--- a/images/nem-dreamland-uc-160x200x09/config.ini
+++ b/images/nem-dreamland-uc-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x200x09.html
 lastopen = 2024-06-07 01:35:10
 
 [search]
-lastsearch = 2024-07-25 13:48:51
+lastsearch = 2024-07-25 14:48:05
 
 [www.diepxuan.com]
 match = 51.9%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOooT7LLYAbrvKGzJDpxH4C0t1mZdcVFgx-UIXk9_9t9JlN5iZQyX
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [forums.brianenos.com]
 match = -66.7%%
