--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-25 14:30:23
 [demxanh.com]
 match = 13.8%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOoodV_pr0uczW5CfSZ6a8dGBSemB7uRJFTvA8l7uPW08J4PxH9MA
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -44,7 +44,7 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOoqrLwEuUdGk49bah6Rg0v5UtAatW42tb-sn43ZjwG6rrTu94hJd
 
 [www.facebook.com]
 match = 28.0%%
