--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-25 10:17:30
+lastsearch = 2024-07-25 14:52:35
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0tbv6-Di&sig=ACfU3U2gkNgjtjB3n1xGR-aFT6oW19dPHg&hl=en&sa=X&ved=2ahUKEwiZz7f8_cCHAxU5pIkEHW_MCo4Q6AF6BAgXEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVLQZv2e&sig=ACfU3U3WrfaxIMXAbMBFPH8n0YKTTV6j-Q&hl=en&sa=X&ved=2ahUKEwiWx7Ts2sGHAxWkAHkGHcTaC00Q6AF6BAgYEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -5.9%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOop_fH8f9SO3stf5dWBgSCm_Y5le_XSSGlu-QDcQGCTQG8WR9jPn
 
 [www.kvaser.cn]
 match = -5.9%%
