--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-25 13:47:49
+lastsearch = 2024-07-25 14:44:18
 
 [vnexpress.net]
 match = -128.6%%
@@ -17,9 +17,9 @@ title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
 url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
-match = -119.0%%
-title = 3 Ngày 2 Đêm Du Lịch 1 SAO vs 10 SAO - Tập 1: Thử Thách ...
-url = https://www.youtube.com/watch?v=SQm6BZvNrig
+match = -114.3%%
+title = Khám Phá Con Đường "Tỷ Đô" Đẹp Nhất Thành Phố Vũng ...
+url = https://www.youtube.com/watch?v=NhZRPUFmsaw
 
 [liontrip.vn]
 match = -81.0%%
