--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-25 13:45:22
+lastsearch = 2024-07-25 14:53:21
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -285.7%%
-title = Cập nhật giá TIVI dưới 10 triệu trong tháng 7 tại Điện máy XANH
-url = https://www.youtube.com/watch?v=j_AHP98h1wM
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -435,4 +435,9 @@ url = http://parlec.com/app3769299
 match = -214.3%%
 title = Top 10 Best Xanh Restaurant Near San Jose, California
 url = https://www.yelp.com/search?find_desc=Xanh+Restaurant&find_loc=San+Jose,+CA
+
+[www.labattusa.com]
+match = -14.3%%
+title = Labatt USA: Welcome
+url = https://www.labattusa.com/
 
