CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-25 13:39:08
+lastsearch = 2024-07-25 15:29:00
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -395,4 +395,9 @@ url = https://www.mpva.go.kr/english/index.do
 match = 0.0%%
 title = 
 url = https://worldpopulationreview.com/country-rankings/age-of-consent-by-country
+
+[indianagazette.newspaperarchive.com]
+match = -143.5%%
+title = Nov 19, 1952, p. 1 - Indiana Evening Gazette Newspaper Archives
+url = https://indianagazette.newspaperarchive.com/indiana-evening-gazette/1952-11-19/
 
