--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-25 13:47:06
+lastsearch = 2024-07-25 15:23:47
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 [foreverbedding.net]
 match = -57.1%%
 title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18?srsltid=AfmBOop6uA8pdKYelrTsgwO-qct8jjky6LlqArHOpEvPEpLAycgPB73m
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
 
 [shopee.vn]
 match = -114.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc018
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorArojew-w9mJuT9c89AVQlMNAAUsMJ73kKeL5yxsfF1fqBRAOz
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [hoangkimhome.com]
 match = -90.5%%
