--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-25 14:19:00
+lastsearch = 2024-07-25 15:27:58
 
 [www.instagram.com]
 match = -161.5%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Catherine_Dior
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
