--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-25 12:16:56
+lastsearch = 2024-07-25 15:30:04
 
 [www.instagram.com]
-match = -6.7%%
-title = Hoi Chan (@hoichandraws)
+match = -173.3%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [thewoksoflife.com]
