--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-25 14:53:42
+lastsearch = 2024-07-25 15:17:09
 
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOorlXbaOp9Utea8ovkirT2TH_xk7klBuxmU5XAwgD5r4KYRwQPe9
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [www.htlight.vn]
 match = -26.7%%
