--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-25 11:48:44
+lastsearch = 2024-07-25 15:23:05
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+match = 14.3%%
+title = Nệm EverHome TC 160x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-160x200x09.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -52.4%%
-title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/
+match = -57.1%%
+title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
 
 [www.tiktok.com]
 match = -95.2%%
@@ -122,8 +122,8 @@ title = DS No gui Cong BHXH T7.2022.xlsx
 url = https://hanoi.baohiemxahoi.gov.vn/content/tintuc/Lists/News/Attachments/31604/DS No gui Cong BHXH T7.2022.pdf
 
 [www.amazon.com]
-match = 25.0%%
-title = Everhome Designs
+match = 19.0%%
+title = Amazon.com: Everhome Designs
 url = https://www.amazon.com/Everhome-Designs/s?k=Everhome+Designs
 
 [core.ac.uk]
@@ -145,4 +145,19 @@ url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1amecrk
 match = -150.0%%
 title = Untitled
 url = https://upload.wikimedia.org/wikipedia/commons/d/d7/Punch,_Vol._XXV_(IA_dli.granth.78042).pdf
+
+[everhomestores.com]
+match = -104.8%%
+title = EverHome Store: "EVERHOME | Elevate Your Living Spaces ...
+url = https://everhomestores.com/
+
+[everhomevn.com]
+match = 9.5%%
+title = Đệm bông ép Everhome TC - 160x200x18cm
+url = https://everhomevn.com/dem-bong-ep-everhome-tc-160x200x18cm/
+
+[edelmanhome.com]
+match = -4.8%%
+title = New products – Tagged "16" - 20""
+url = https://edelmanhome.com/collections/new-collection/16-20
 
