--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-25 13:26:05
+lastsearch = 2024-07-25 15:22:44
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOopNGCLey-MW61VMSPT7NBZaZZv8ei0lY2Vt4OKDZzv_XcI5pQru
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooQJkZNety4wzIc60pjVV61COv7BJHoBDDAmSaoF4xcN8yZ6gWj
 
 [www.lazada.vn]
 match = -78.3%%
 title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html?srsltid=AfmBOorIGELDQUm9xlZWtzoMh06MLpCVusDWdrAuZepa4VJGF3cIGHaJ
 
 [tiki.vn]
-match = -60.9%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm màu 05
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-mau-05-p33109112.html/
+match = -47.8%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=71118853
 
 [thegioidemviet.vn]
-match = -82.6%%
-title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
+match = -65.2%%
+title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
 
 [www.diepxuan.com]
 match = 100.0%%
