CI images update

--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-25 06:29:20
+lastsearch = 2024-07-25 15:35:40
 
 [shopee.vn]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.diepxuan.com]
-match = 32.0%%
-title = Chiếu điều hòa kèm gối 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-140x190.html
+match = 8.0%%
+title = Chiếu điều hòa lụa 140x190 kèm gối - Điệp Xuân
+url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html
 
 [voibaby.vn]
 match = 40.0%%
