--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-25 04:30:17
+lastsearch = 2024-07-25 15:33:33
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -102,9 +102,9 @@ title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -200.0%%
-title = 'Anh hùng không áo choàng' vạch trần chiêu trò bán xe ...
-url = https://tuoitre.vn/anh-hung-khong-ao-choang-vach-tran-chieu-tro-ban-xe-toyota-hong-nang-doi-lot-sua-duoc-20240724092914719.htm
+match = -125.0%%
+title = Đưa di sản văn hóa vào sản phẩm khởi nghiệp
+url = https://tuoitre.vn/dua-di-san-van-hoa-vao-san-pham-khoi-nghiep-20240725092544093.htm
 
 [www.apple.com]
 match = 0.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = -187.5%%
+title = Ánh Trăng Đêm Nay Thật Đẹp • 今晚月色真美
+url = https://www.facebook.com/story.php/?story_fbid=122160660896122203&id=61553666104275
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -229,7 +229,7 @@ url = https://tiki.vn/blog/stt-yeu-doi/
 [books.google.com]
 match = -231.2%%
 title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=HqOaAAAAIAAJ&pg=RA3-PA86&lpg=RA3-PA86&dq=chieu+lac+gam+16&source=bl&ots=oINfXeon6t&sig=ACfU3U2b-TRaCspM_BSnFd1KUOn7vL3tEg&hl=en&sa=X&ved=2ahUKEwi4jPfjtp2HAxUThIkEHU4bCPsQ6AF6BAgVEAM
+url = https://books.google.com/books?id=HqOaAAAAIAAJ&pg=RA3-PA86&lpg=RA3-PA86&dq=chieu+lac+gam+16&source=bl&ots=oINgZjno5t&sig=ACfU3U3aI_FI3XoQmj6XYo4w7ymSOZ-uaw&hl=en&sa=X&ved=2ahUKEwjZ4rmA5MGHAxX9JEQIHSHSAIAQ6AF6BAgjEAM
 
 [timbus.vn]
 match = -27.3%%
@@ -262,9 +262,9 @@ title = Báo Hòa Bình - Co quan ngon luan cua tinh
 url = https://baohoabinh.com.vn/
 
 [baocaobang.vn]
-match = -200.0%%
-title = Đại hội đại biểu Hội LHTN Hà Quảng lần thứ VI, nhiệm kỳ ...
-url = https://baocaobang.vn/dai-hoi-dai-bieu-hoi-lhtn-ha-quang-lan-thu-vi-nhiem-ky-2024-2029-3170752.html
+match = -156.2%%
+title = Linh thiêng Nghĩa trang liệt sĩ quốc gia Trường Sơn
+url = https://baocaobang.vn/linh-thieng-nghia-trang-liet-si-quoc-gia-truong-son-3170853.html
 
 [tgpsaigon.net]
 match = -106.2%%
