--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-25 13:22:56
+lastsearch = 2024-07-25 15:32:50
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -78.6%%
-title = Ruột gối hơi bông gòn Thắng Lợi ...
-url = https://shopee.vn/product/431709776/18649811558
+match = -121.4%%
+title = ruột gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=ruột gối
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
