--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -636,3 +636,8 @@ match = -113.6%%
 title = Recent Alarms | Southern Marin Fire Protection District, CA
 url = https://www.smfd.org/our-district/district-outreach-and-communications/recent-alarms
 
+[parks.nv.gov]
+match = -72.7%%
+title = Nevada Outdoor Recreation Asset Inventory Totals
+url = https://parks.nv.gov/uploads/documents/Appendix_I._2021_Nevada_Outdoor_Recreation_System_Asset_Inventory_.xlsx
+
