--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-25 10:38:53
+lastsearch = 2024-07-25 15:45:25
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOoqudmxzP1JdagUPz4gcI1cF9DVMYs8bCsI55-LJIwrtJYTFP68S
+url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
 match = -240.0%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
