--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 01:22:00
 lastsearch = 2024-07-25 15:26:37
 
 [www.lazada.vn]
-match = -88.9%%
-title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -111.1%%
+title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
+url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -22,14 +22,14 @@ title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
 url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.facebook.com]
-match = -18.2%%
-title = NEM Fashion
-url = https://www.facebook.com/nemfashion.official/
+match = -105.6%%
+title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
+url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [eva.vn]
 match = -150.0%%
