--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-25 06:45:15
+lastsearch = 2024-07-25 15:36:22
 
 [m.youtube.com]
 match = -144.4%%
@@ -23,13 +23,13 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.facebook.com]
 match = -105.6%%
-title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -127.8%%
-title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
-url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
+match = -161.1%%
+title = bf nem nướng nha trang 39ka mở cả trưa và tối cập bến ...
+url = https://www.tiktok.com/@bachuareview/video/7236713258948840712?lang=en
 
 [www.youtube.com]
 match = -133.3%%
