CI images update

--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-25 15:33:54
 [www.diepxuan.com]
 match = 5.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoro_wpMUvJmcMQoQlnqxdTL0WFOs0d3p_cPtjzHjdh1VjNQail1
 
 [www.tui.co.uk]
 match = -10.5%%
@@ -65,4 +65,9 @@ url = https://www.cruisecritic.co.uk/cruise/marella/marella-voyager
 match = 23.8%%
 title = TUI Airways | Page 59
 url = https://forums4airports.com/threads/360/page-59
+
+[www.tripadvisor.in]
+match = 0.0%%
+title = Tui dreamliner - SeatGuru Forum
+url = https://www.tripadvisor.in/ShowTopic-g1-i12084-k14596422-Tui_dreamliner-SeatGuru.html
 
