--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-25 13:55:26
+lastsearch = 2024-07-25 15:59:35
 
 [www.youtube.com]
 match = -52.0%%
@@ -43,8 +43,8 @@ url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuy
 
 [books.google.com]
 match = -96.0%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=rKfaAAAAMAAJ&pg=RA5-PA75&lpg=RA5-PA75&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=3_RRRdnuCF&sig=ACfU3U2demfJpYwnz0KGvrj_E6nCwiUxsw&hl=en&sa=X&ved=2ahUKEwjdg_P_yL-HAxUJJdAFHeqnCD8Q6AF6BAgXEAM
+title = Địa chí Tiền Giang - Volume 2 - Page 921 - Google Books Result
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZLHBtGOl&sig=ACfU3U2a4l2Qgdxk_A9g4eB4LyQAxDfzLw&hl=en&sa=X&ved=2ahUKEwigq6zp6cGHAxWnjokEHal6CtkQ6AF6BAgWEAM
 
 [www.skyscanner.com.vn]
 match = -60.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoqy_SDX8Qli8KMoDAdxXFajYPts9nGvWRjhXNPwQ-68HYlLM_Zm
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
