--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-25 14:55:43
+lastsearch = 2024-07-25 15:52:42
 
 [www.gov.uk]
 match = -200.0%%
@@ -1025,4 +1025,9 @@ url = https://www.austinfc.com/
 match = -33.3%%
 title = Texas Christian University
 url = https://www.tcu.edu/
+
+[www.stmichaelcinema.com]
+match = -160.0%%
+title = St Michael Cinema 15 St Michael | Movie Theater
+url = https://www.stmichaelcinema.com/
 
