CI images update

--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-25 12:43:49
+lastsearch = 2024-07-25 16:20:38
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -84,7 +84,7 @@ url = https://sieuthidienmaypico.com/tham-chui-chan-ariel-mau-xanh-nti272043734.
 [jysk.vn]
 match = -62.5%%
 title = Thảm Chùi Chân Trải Cửa Ra Vào Đẹp, Nhiều Mẫu - JYSK.vn
-url = https://jysk.vn/tham-trai-cua
+url = https://jysk.vn/tham-trai-cua?srsltid=AfmBOopsLGWtdYxpUs97euXju4DK5QP0_Voqpzpr2msQCfHmcP3C8aRK
 
 [shouse.vn]
 match = -50.0%%
@@ -100,4 +100,9 @@ url = https://sieuthinguyenkim.com/tham-lau-chan-ozzy-mau-xam-trang-nti272045259
 match = -83.3%%
 title = Google Tivi Sony 4K 50 Inch KD-50X80K giá rẻ, giao ngay
 url = https://dienmaycholon.com/tivi/google-tivi-sony-4k-50-inch-kd50x80k
+
+[www.teamstar-praha.cz]
+match = 21.7%%
+title = Thảm 50x80cm chống trơn
+url = https://www.teamstar-praha.cz/vi/tham-milano-50x80cm/
 
