--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-25 12:18:36
+lastsearch = 2024-07-25 16:31:22
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -147.4%%
-title = Ò Ó O o Dậy Đi Thôi Mau Dậy Bạn Ơi - Bài Hát Bé Nghe Mỗi ...
-url = https://www.youtube.com/watch?v=_bALkbOOQfY
+match = -126.3%%
+title = 30 bài hát thiếu nhi hay nhất cho bé yêu - Em Muốn Làm ...
+url = https://www.youtube.com/watch?v=uOn2FELXfUc
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -126.3%%
-title = Đồ chơi trẻ em thông minh hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=đồ chơi trẻ em thông minh
+match = -110.5%%
+title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu tre
 
 [khodem.vn]
 match = 31.6%%
