--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-25 11:31:33
+lastsearch = 2024-07-25 16:14:10
 
 [demxanh.com]
-match = -7.4%%
-title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
+match = 25.9%%
+title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [shopee.vn]
 match = 18.5%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Sợi Mây Tổng Hợp Cao Cấp ... - Babies.vn
 url = https://babies.vn/chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chieu-dieu-hoa-thong-minh-thoang-khi-mat-ruoi-cho-mua-he
 
 [betiti.com]
-match = -29.6%%
-title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
-url = https://betiti.com/san-pham/chieu-dieu-hoa/
+match = 68.2%%
+title = Chiếu điều hòa kèm gối
+url = https://betiti.com/san-pham/chieu-dieu-hoa-kem-goi/
 
 [nemsaithanh.com]
 match = 46.2%%
