--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-25 15:42:18
+lastsearch = 2024-07-25 16:14:31
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoraCeSBs9Jjagz4T1cEuaTeTMh8aH0BsF2HzWAzrI4F_uxDH10i
 
 [shopee.vn]
 match = 13.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOooyVqAehdmMbhBMgrTpxeE2oQhNsVBjYEXHmA5OxRhP-sHoq9yC
 
 [tiki.vn]
 match = 40.0%%
