--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-25 15:40:56
+lastsearch = 2024-07-25 16:22:22
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -32,14 +32,14 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -269.2%%
+title = MAC Powder Kiss: Lip Workshop with Sylvia Gani | MAC ...
+url = https://www.youtube.com/watch?v=2OJn1qtw3WY
 
 [www.regmovies.com]
 match = -215.4%%
@@ -277,8 +277,8 @@ title = Ginny & Georgia (TV Series 2021
 url = https://www.imdb.com/title/tt10813940/
 
 [ottawabraves.com]
-match = -292.3%%
-title = Women's Flag Football vs Thomas University (Ga.) on 3/16/2024
+match = -284.6%%
+title = Women's Flag Football vs Thomas University (Ga.) on 3/16 ...
 url = https://ottawabraves.com/sports/womens-flag-football/stats/2024/thomas-university-ga-/boxscore/9867
 
 [www.soccerwire.com]
