--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-25 13:00:00
+lastsearch = 2024-07-25 16:15:34
 
 [munghoangphat.com]
 match = -24.0%%
@@ -95,4 +95,9 @@ url = https://giadungthienduyen.com/sg-mung-chup-tu-bung-dinh-vuong-co-vien-chon
 match = -12.0%%
 title = Màn Chụp Mùng Tự Bung đỉnh rộng_mùng cao cấp ...
 url = https://www.sendo.vn/man-chup-mung-tu-bung-dinh-rong-mung-cao-cap-dinh-vuong-cao-cap-29508053.html
+
+[vinmart365.com]
+match = 4.0%%
+title = Màn Chụp Tự Bung Đỉnh Vuông Cao Cấp - Vinmart365
+url = https://vinmart365.com/san-pham/man-chup-tu-bung-dinh-vuong-hang-cao-cap/
 
