--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-25 14:32:06
+lastsearch = 2024-07-25 16:14:52
 
 [www.everonvn.vn]
-match = 20.0%%
-title = Đệm bông Everon 1m, 1m2, 1m4
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+match = -80.0%%
+title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
 
 [everon.vip]
 match = 50.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = 20.0%%
-title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+match = 15.0%%
+title = đệm Hàn Quốc - Everon
+url = https://everonvn.com.vn/7/dem-everon
 
 [everonchinhhang.vn]
 match = -50.0%%
