--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-25 14:50:49
+lastsearch = 2024-07-25 16:31:03
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -17,19 +17,19 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = -100.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
+match = 10.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY POTENCY
-url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
+title = LÒ XO TÚI RUBY MASTERY
+url = https://tuananh.vn/lo-xo-tui-ruby-mastery-p444.html
 
 [dem24h.vn]
-match = 20.0%%
-title = Đệm Lò Xo Tuấn Anh Raina
-url = https://dem24h.vn/dem-lo-xo-tui-raina-korea
+match = -35.0%%
+title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
+url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 
 [demviethome.vn]
 match = -140.0%%
