CI images update

--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-25 16:29:00
+lastsearch = 2024-07-25 17:00:44
 
 [demxanh.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOord_p0pfK923K9R0tstiKOUaEuNXsl8okbaW4_qttSUVBSQW-_c
+match = 3.4%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopTLPMiyg6tUC3G57Rl68Xn7Ih2BaFc3dyu2z6yEIS1qLB7zo7_
 
 [entershopping.vn]
 match = 3.4%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOoqcNArDghCrD7EZYfxvWxHS9BPExP1u478dVkcjKop2nzhyIrmN
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOorY5TUE40IkC3Z8f6XyyNTF23w8y9zqOlzTcb-svjEOq2WEIcWv
 
 [russo.vn]
 match = -20.7%%
