--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-25 16:18:36
+lastsearch = 2024-07-25 16:57:22
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooQJkZNety4wzIc60pjVV61COv7BJHoBDDAmSaoF4xcN8yZ6gWj
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
 match = -78.3%%
@@ -19,7 +19,7 @@ url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-sa
 [tiki.vn]
 match = -47.8%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=71118853
 
 [thegioidemviet.vn]
 match = -65.2%%
