--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = 20.8%%
-title = Chăn ga gối cotton Notag 4 món 16
-url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
+match = -8.3%%
+title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
+url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
