--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-25 16:01:02
+lastsearch = 2024-07-25 16:53:32
 
 [www.kymdan.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
 url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
-match = 0.0%%
-title = bộ ga everon esbm 21016
-url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
+match = 18.8%%
+title = Chăn Ga Gối Nệm | YESHOME BEDDING
+url = https://yeshomebedding.com/bo-san-pham-everon-ept24036
 
 [www.lazada.vn]
 match = -15.6%%
@@ -37,9 +37,9 @@ title = Bộ Ga Kymdan Serenity kèm vỏ mền kích thước 160 x 200cm
 url = https://shopee.vn/Bộ-Ga-Kymdan-Serenity-kèm-vỏ-mền-kích-thước-160-x-200cm-i.191696919.24000449823
 
 [tiki.vn]
-match = -6.2%%
-title = Bộ grab giường có mền hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ grab giường có mền
+match = -9.4%%
+title = Vỏ bọc đệm sofa hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=vỏ bọc đệm sofa
 
 [www.diepxuan.com]
 match = 100.0%%
