--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-25 14:30:02
+lastsearch = 2024-07-25 16:44:47
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -79,5 +79,5 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOopqNlupjKdTMQIjxJnmLv5YBd2G-XYhV_D-fE5t904qjkKTJULi
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
