--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-25 12:52:12
+lastsearch = 2024-07-25 16:57:01
 
 [www.diepxuan.com]
-match = -64.7%%
-title = Ruột gối kê KOREA - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-korea.html
+match = 5.9%%
+title = Điệp Xuân Ruột gối kê Korea 45x65
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 
 [entershopping.vn]
 match = -123.5%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -105.9%%
-title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
-url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
+match = 0.0%%
+title = Ruột gối Korea | Shopee Việt Nam
+url = https://shopee.vn/Ruột-gối-Korea-i.33372594.2602291227
 
 [demxanh.com]
 match = -135.3%%
@@ -49,7 +49,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOorw_cxkOG9S7nNgXMpPz6SqqVFearu6xYL8hMdy92aSPc-FNnsK
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
 
 [www.hotdeal.vn]
 match = -111.8%%
