CI images update

--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-25 16:31:21
+lastsearch = 2024-07-25 17:30:04
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
+title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOooSzFezzwU1ecdmUzmM7lT9D3JoytQ3Qmj6hYoHcRYIDAusp3Ks
 
 [dailyeveron.vn]
 match = -66.7%%
