--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-25 14:30:23
+lastsearch = 2024-07-25 17:15:35
 
 [demxanh.com]
 match = 13.8%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOoodV_pr0uczW5CfSZ6a8dGBSemB7uRJFTvA8l7uPW08J4PxH9MA
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
