--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-25 14:19:21
+lastsearch = 2024-07-25 17:14:53
 
 [shopee.vn]
 match = 7.4%%
@@ -19,7 +19,7 @@ url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tu
 [www.lazada.vn]
 match = -44.4%%
 title = Chăn Lông tuyết KQ 3 Lớp - Chăn 5kg hàng cao cấp chất ...
-url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html?srsltid=AfmBOoqcnvnXdQSENTVyIvPbxRNegoS0QgwvCJYdyvNz198dH8zmukgE
+url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html
 
 [tiki.vn]
 match = 11.1%%
