--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-25 16:50:24
+lastsearch = 2024-07-25 17:21:04
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -220.0%%
-title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
-url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -52,14 +52,14 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 12
+match = 20.0%%
+title = Chiếu lác D2 12 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -146.7%%
-title = bút kèn D212 bút đầu quay dễ thương viết gel
-url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
@@ -102,8 +102,8 @@ title = Korea Visa Application Center in Ha Noi
 url = https://visaforkorea-vt.com/
 
 [www.slideshare.net]
-match = -186.7%%
-title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết
+match = -226.7%%
+title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết | PDF
 url = https://www.slideshare.net/slideshow/50-thi-hc-sinh-gii-vt-l-12-c-p-n-chi-tit/239568317
 
 [diendan.hocmai.vn]
