--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-25 16:54:14
+lastsearch = 2024-07-25 17:20:02
 
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOorNjPmIrz-Tzrh0qlvIi5zvE6kK4o3yg_iZcXrLvK5gjcZFGB12
 
 [www.facebook.com]
 match = 52.2%%
@@ -22,9 +22,9 @@ title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
 url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
-match = 26.1%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng
-url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -74,7 +74,7 @@ url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 [www.diepxuan.com]
 match = 13.0%%
 title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html?srsltid=AfmBOoojXaC3so_gnm664IPT83duhJu_Ft2064Sjh_e4wzaIFHxWY4J-
 
 [h5.lazada.vn]
 match = -17.4%%
