--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-25 16:16:37
+lastsearch = 2024-07-25 17:18:19
 
 [www.diepxuan.com]
 match = -131.2%%
 title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOop557BBux5Ye-lqwaR7UD_KD6Vkf1jqymS_W1v8ItcbwcHnPnMo
 
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOorINYSe4n5W8ZSCRJm90EA6R1pHlVnGKtmn33USKAMoTJGoUfQA
 
 [m.facebook.com]
 match = 0.0%%
