CI images update

--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-25 16:53:32
+lastsearch = 2024-07-25 17:43:04
 
 [www.kymdan.com]
-match = 4.2%%
-title = Bộ ga trải giường Kymdan
-url = https://www.kymdan.com/danh-muc/drap-trai-giuong
+match = -333.3%%
+title = Kymdan
+url = https://www.kymdan.com/home.do?lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
 url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
-match = 18.8%%
-title = Chăn Ga Gối Nệm | YESHOME BEDDING
-url = https://yeshomebedding.com/bo-san-pham-everon-ept24036
+match = 0.0%%
+title = bộ ga everon esbm 21016
+url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
 
 [www.lazada.vn]
 match = -15.6%%
@@ -37,9 +37,9 @@ title = Bộ Ga Kymdan Serenity kèm vỏ mền kích thước 160 x 200cm
 url = https://shopee.vn/Bộ-Ga-Kymdan-Serenity-kèm-vỏ-mền-kích-thước-160-x-200cm-i.191696919.24000449823
 
 [tiki.vn]
-match = -9.4%%
-title = Vỏ bọc đệm sofa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=vỏ bọc đệm sofa
+match = -6.2%%
+title = Bộ grab giường có mền hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ grab giường có mền
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = KYMDAN | Our Quality Your Comfort
 url = https://kymdan.us/en/
 
 [demxinh.vn]
-match = 0.0%%
-title = Hướng Dẫn Sử Dụng Chiếu Điều Hòa Đúng Cách
-url = https://demxinh.vn/tin-tuc/huong-dan-su-dung-chieu-dieu-hoa-dung-cach.html
+match = -40.6%%
+title = {Top 20+} Bộ chăn ga gối đệm cưới màu tím đẹp, mềm mại ...
+url = https://demxinh.vn/tin-tuc/mau-chan-ga-goi-mau-tim-cho-phong-cuoi.html
 
 [dem24h.vn]
 match = 3.1%%
