--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-25 15:59:35
+lastsearch = 2024-07-25 17:36:08
 
 [www.youtube.com]
 match = -52.0%%
@@ -44,7 +44,7 @@ url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuy
 [books.google.com]
 match = -96.0%%
 title = Địa chí Tiền Giang - Volume 2 - Page 921 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZLHBtGOl&sig=ACfU3U2a4l2Qgdxk_A9g4eB4LyQAxDfzLw&hl=en&sa=X&ved=2ahUKEwigq6zp6cGHAxWnjokEHal6CtkQ6AF6BAgWEAM
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZLIspENp&sig=ACfU3U29Xwd2N-YRO8LQ9WTY6i6QNTo9Lg&hl=en&sa=X&ved=2ahUKEwiukuqz_8GHAxWYMlkFHbPGCiIQ6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -60.0%%
