--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-25 14:43:18
+lastsearch = 2024-07-25 17:34:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -42,9 +42,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -193.3%%
+title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP. ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2398165530563912/
 
 [dieuhanhgiaothong-sgtvt.hochiminhcity.gov.vn]
 match = -126.7
@@ -400,4 +400,14 @@ url = https://bvcubadonghoi.vn/ham-count-counta-countif-trong-excel
 match = -233.3%%
 title = Máy lắc 3 chiều cỡ vừa, Model: RCK 3D 200, Hãng TaisiteLab ...
 url = https://www.thietbianhoa.vn/may-lac-3-chieu-co-vua-model-rck-3d-200-hang-taisitelab-sciences-inc-my
+
+[vnvc.vn]
+match = -233.3%%
+title = Bà bầu bị sốt xuất huyết có sao không? Triệu chứng lúc ...
+url = https://vnvc.vn/ba-bau-bi-sot-xuat-huyet/
+
+[steamcommunity.com]
+match = -140.0%%
+title = THOÁT KHỎI RANK RÁC RƯỞI - Counter-Strike 2
+url = https://steamcommunity.com/app/730/discussions/0/135508031957446252/
 
