--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-25 15:24:09
+lastsearch = 2024-07-25 17:40:23
 
 [dreamland.vn]
-match = -64.0%%
-title = Cotton lụa PT08 - Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/Cotton-lua-PT08-i4052.html
+match = -32.0%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [demxanh.com]
 match = -24.0%%
 title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M04
-url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html
+url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html?srsltid=AfmBOoptR3sWScbn7agvJ-XpuFg-oibqD5aeBwM_ywDfpGlt98JDkWUQ
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -28,8 +28,8 @@ url = http://unicom.mx/micrositios.aspx?i=https://xn--18-6kcaa2cmqgaegdjggepph9y
 
 [newsin.ir]
 match = -116.0%%
-title = Healthline nz jobs 1 5 mérföld hány km مواعيد محلات مول مصر في ...
-url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://xn-----7kcbchbkox0ag5apb3asrb4o.xn--p1ai/oTdAvh6fepr
+title = شعر عن اليوم الوطني ٩٢ The moms co review Labial maybelline ...
+url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://dwtao.ru/5826917wwwgoldenpondercomhk4fe43y
 
 [shopee.vn]
 match = 56.0%%
