CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-25 15:47:54
+lastsearch = 2024-07-25 17:58:28
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = -22.2%%
 title = Chan Nhung 5kg Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-nhung-5kg/?srsltid=AfmBOooGSRbcOthRgZv0Jkn7wEntB_XdOMttYQhdxu-nDcqajikX-H1Y
 
 [tiki.vn]
 match = -3.7%%
