--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-25 13:53:14
+lastsearch = 2024-07-25 17:50:34
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -12,9 +12,9 @@ title = THAI BINH 05, Bulk Carrier - Details and current position
 url = https://www.vesselfinder.com/vessels/details/9482811
 
 [www.tripadvisor.com]
-match = -69.6%%
-title = THE 10 BEST Hotels in Thai Binh, Vietnam 2024 (from $11)
-url = https://www.tripadvisor.com/Hotels-g4355220-Thai_Binh_Thai_Binh_Province-Hotels.html
+match = -60.9%%
+title = Ka Chai Thai Street Food - Thomaston Restaurants
+url = https://www.tripadvisor.com/Restaurant_Review-g1438850-d25361618-Reviews-Ka_Chai_Thai_Street_Food-Mid_Coast_Maine_Thomaston.html?m=66525
 
 [www.ncbi.nlm.nih.gov]
 match = -104.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Vietnamese language
-url = https://en.wikipedia.org/wiki/Vietnamese_language
+match = -38.5%%
+title = Ngo Dinh Diem
+url = https://en.wikipedia.org/wiki/Ngo_Dinh_Diem
 
 [books.google.com]
 match = -43.5%%
@@ -375,4 +375,9 @@ url = https://beirutibrit.wordpress.com/2017/09/30/48-hours-in-ho-chi-minh-city-
 match = -65.2%%
 title = IELTS test dates, fees and locations in Vietnam
 url = https://www.britishcouncil.vn/en/exam/ielts/dates-fees-locations
+
+[www.google.com.sg]
+match = -283.3%%
+title = Google
+url = https://www.google.com.sg/
 
