--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-25 11:42:17
+lastsearch = 2024-07-25 17:46:20
 
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Jenna_Dewan
+url = https://en.wikipedia.org/wiki/Non,_je_ne_regrette_rien
 
 [www.marysrosaries.com]
 match = -33.3%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBwbysqn&sig=ACfU3U3sqvGesLLZN5KvD-zu6AgDZjCSPg&hl=en&sa=X&ved=2ahUKEwj7sP6nsMGHAxWjEFkFHQ8YBT4Q6AF6BAgaEAM
+match = -142.9%%
+title = A critical pronouncing dictionary. With a suppl., by E. Smith
+url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkl4IzaP&sig=ACfU3U0svu5EaqFS2u-uoW_Ul9yOaTz7lw&hl=en&sa=X&ved=2ahUKEwjEtbvXgcKHAxVKMVkFHd6HAJUQ6AF6BAgZEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -76.2%%
+title = Nem Dubrovnik 2024 confirms a record of partecipants
+url = https://www.formatbiz.it/dettNews.aspx?id=11256
 
 [yro.slashdot.org]
 match = -114.3%%
