--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-25 14:14:10
+lastsearch = 2024-07-25 17:54:01
 
 [hanvico.net.vn]
-match = -42.1%%
-title = Ruột gối lông vũ cao cấp 30x50 - Hanvico
-url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
+match = -10.5%%
+title = Ruột gối lông vũ cao cấp - Hanvico
+url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
-title = Ruột gối lông vũ cao cấp 45*65
-url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-1
+title = Ruột gối lông vũ cao cấp 50*70
+url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-50-70
 
 [antbedding.com]
 match = 78.9%%
@@ -57,9 +57,9 @@ title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
 url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
-match = -110.5%%
-title = Ruột gối nằm lông vũ nhân tạo Microfiber, gối siêu êm ...
-url = https://shopee.vn/Ruột-gối-nằm-lông-vũ-nhân-tạo-Microfiber-gối-siêu-êm-mềm-chuẩn-KS-5-sao-giá-dùng-thử-hấp-dẫn-i.15141865.3037316529
+match = -142.1%%
+title = Ruột gối lông vũ tự nhiên K-Sleep tiêu chuẩn khách sạn 5 ...
+url = https://shopee.vn/Ruột-gối-lông-vũ-tự-nhiên-K-Sleep-tiêu-chuẩn-khách-sạn-5-sao-i.724553710.18837419918
 
 [demgiare.net]
 match = 0.0%%
