--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-25 16:43:18
+lastsearch = 2024-07-25 17:56:23
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -17,9 +17,9 @@ title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp 
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamvinhthuan.com]
-match = 0.0%%
-title = Thảm xốp hoạt hình 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
+match = 16.7%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
 match = -61.1%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -83.3%%
-title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
-url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
+match = -27.8%%
+title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
+url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
 
 [thamtuonglam.vn]
 match = 21.4%%
